# hash-trash

./: .gitignore  README.md
c/: CMakeLists.txt  main.c
cpp/: .gitignore  CMakeLists.txt  main.cpp  stuff.hpp
cs/: .gitignore  CMakeLists.txt  hash-trash.cs
dart/hash_trash/: pubspec.yaml
dart/hash_trash/lib/: hash_trash.dart
dart/hash_trash/test/: hash_trash_test.dart
python/: main.py
rust/hash-trash/: Cargo.toml
rust/hash-trash/src/: main.rs
